2026-10-05_kubernetes/day2/lab0/manifests/frontend_js_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-js
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: frontend-js
  template:
    metadata:
      labels:
        app: frontend-js
        service: frontend-shared
    spec:
      containers:
        - name: frontend-js
          image: ghcr.io/ondrejsika/counter-frontend
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
            failureThreshold: 60
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 300Mi
