2026-10-05_kubernetes/day2/lab0/manifests/frontend_go_gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-go
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: frontend-go
      sectionName: https
  hostnames:
    - argocd-counter-manifests-go.gw.sikademo.com
  rules:
    - backendRefs:
        - name: frontend-go
          port: 80
