2026-10-05_kubernetes/day2/lab0/manifests/frontend_shared_gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-shared
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: frontend-shared
      sectionName: https
  hostnames:
    - argocd-counter-manifests.gw.sikademo.com
  rules:
    - backendRefs:
        - name: frontend-shared
          port: 80
