2026-10-05_kubernetes/day2/lab0/manifests/frontend_shared_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-shared
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - argocd-counter-manifests.k8s.sikademo.com
      secretName: argocd-counter-manifests.k8s.sikademo.com-tls
  rules:
    - host: argocd-counter-manifests.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-shared
                port:
                  number: 80
